classDiagram
  class BaseParser {
    supported_extensions : tuple[str, ...]
    \_\_init\_\_() None
    \_\_init_subclass\_\_() None
    parse(data: IOPathWrapper)* DataContainer
  }
  style BaseParser fill:#77AADD
  class DataType {
    name
  }
  style DataType fill:#77AADD
  class EdevisParser {
    supported_extensions : tuple
    parse(data: IOPathWrapper) DataContainer
  }
  style EdevisParser fill:#77AADD
  class HDF5Parser {
    supported_extensions : tuple
    parse(data: IOPathWrapper) DataContainer
  }
  style HDF5Parser fill:#77AADD
  class SimulationParser {
    supported_extensions : tuple
    parse(data: IOPathWrapper) DataContainer
  }
  style SimulationParser fill:#77AADD
  EdevisParser --|> BaseParser
  HDF5Parser --|> BaseParser
  SimulationParser --|> BaseParser
